================
PY-SCA CHANGELOG
================

v0.6.2 Release Notes (09/10/21)
* implemented bool(), __bool__ by wrapping implicit boolean context (e.g. if (x)), so that during inferring, proper
    dunder method will be called.
+ convert z3 expression building from ast node, to directly using InferProxy, and relevant dunder method to build the expression
+ added contract module to generate test module.
+ added icontract pre/post condition support.
* clean up the API, and only expose relevant functions to users.

v0.5.0 Release Notes (03/22/21)
* implemented call chain based caching instead of call context, see 4x improvement.
+ filter same structure of assembly after expanded using hash()
* implemented more efficient selected_operand comparing
+ filter out uninferable assembly
+ added --output-leaf-cells to output all used leaf cells of the results
Minor fixes:
    * fixed infer_sequence not checking selected_operand in extract_const
    * fixed z3.ToReal/ToInt missing exception check, disable conditions_mode in extract_const
    * simplified conditions in elif branches by adding it in inverted_conds
    * fixed phi function has repeated variable with same version
    * fixed container binop with right=0 will only yield one result

v0.4.0 Release Notes (02/18/21)
+ change assumption based z3 solver to z3.SimpleSolver that is faster on average on larger input.
+ applying limit_inference that is control by --limit-inference
+ implemented precise bound conditions for statement that is getting replaced.
+ With --limit-inference set to 300, full python file can be completed in sub 10.
* more bugs fixes and stability fixes.

v0.3.0 Release Notes (01/07/21)
* fixed major bugs in accumulating and evaluating bound conditions. It can gather more conditions now.
* fixed z3 solving bugs involving id(obj) having the same due to GC.
+ implemented html server for real time on demand inference of variable.