@@ -9,18 +9,21 @@ if [ -n "`git tag | grep "$version"`" ]; then echo 'ERROR: version already prese
 if [ -n "`git status --porcelain | grep -v CHANGELOG`" ]; then echo 'ERROR: the working directory is not clean; commit or stash changes'; exit 1; fi
 
 if [ ! $SKIP_TEST ]; then
-	echo "Executing tox..."
-	tox -p auto || exit 1
+	echo "Executing test..."
+	poetry run pytest test
 fi
 
-echo "\n### Changing version in version.py..."
-sed -i "s/__version__ = \".*\"/__version__ = \"$version\"/" klara/version.py
+echo "\n### Changing version in pyproject.toml"
+sed -i "s/version = \".*\"/version = \"$version\"/" pyproject.toml
+
+echo "\n### Changing release in docs/conf.py"
+sed -i "s/release = \".*\"/release = \"$version\"/" docs/source/conf.py
 
 echo "\n### Changing version and release date in CHANGElOG..."
 sed -i "s/<unreleased>/$version/" CHANGELOG
 sed -i "s|date pending|$(date +%D)|" CHANGELOG
 
-git add CHANGELOG klara/version.py
+git add CHANGELOG pyproject.toml docs/source/conf.py
 git commit -m "bump version to $version" || exit 1
 
 echo -e "\n### Now tagging and signing..."
